classDiagram
    class Driver {
        <<Aggregate Root>>
        +DriverId id
        +UserId userId
        +DriverStatus status
        +AvailabilityStatus availabilityStatus
        +Vehicle vehicle
        +License license
        +GeoLocation lastLocation
        +Float rating
        +Int totalRides
        +Float acceptanceRate
        +Float cancellationRate
        +register(userId, vehicle, license) Driver$
        +approve()
        +reject(reason)
        +goOnline(location)
        +goOffline()
        +updateLocation(lat, lng)
        +beginRide(rideId)
        +finishRide()
    }

    class DriverStatus {
        <<Value Object>>
        PENDING
        APPROVED
        REJECTED
        SUSPENDED
    }

    class AvailabilityStatus {
        <<Value Object>>
        OFFLINE
        ONLINE
        BUSY
    }

    class Vehicle {
        <<Value Object>>
        +VehicleType type
        +String brand
        +String model
        +String plate
        +String color
        +Int year
        +String imageUrl
    }

    class License {
        <<Value Object>>
        +LicenseClass class
        +String number
        +Date expiryDate
        +isExpired() Boolean
        +isCompatibleWith(VehicleType) Boolean
    }

    class GeoLocation {
        <<Value Object>>
        +Float lat
        +Float lng
        +DateTime updatedAt
    }

    class DriverMatchingService {
        <<Domain Service>>
        +findCandidates(pickup, vehicleType, radius) Driver[]
        +score(Driver, pickup) Float
        +dispatch(RideId, pickup, vehicleType) Driver
    }

    Driver "1" *-- "1" DriverStatus
    Driver "1" *-- "1" AvailabilityStatus
    Driver "1" *-- "1" Vehicle
    Driver "1" *-- "1" License
    Driver "1" *-- "0..1" GeoLocation
    DriverMatchingService ..> Driver
